# jarvis-ai-assistant

./: .env.example  .gitignore  PROJECT_PROGRESS.md  README.md  main.py  pyproject.toml  requirements.txt
app/agent/: __init__.py  context.py  controller.py  conversation.py  executor.py  intent.py  messages.py  metrics.py  models.py  (+3 more)
docs/: ARCHITECTURE.md  FOLDER_STRUCTURE.md  PROJECT_STRUCTURE.md  REQUEST_FLOW.md  ROADMAP.md
scripts/: benchmark_agent.py  test_agent_application_launch.py  test_agent_confirmation.py  test_agent_desktop.py  test_agent_filesystem.py  test_agent_memory.py  test_application_launch_approval.py  test_application_resolution.py  test_approval_expiration.py  test_approval_lifecycle.py  test_approval_rejection.py  test_approval_restart.py  test_conversation_context_bounds.py  test_conversation_memory_separation.py  test_conversation_restart.py  test_desktop_approval.py  test_desktop_policy.py  test_direct_execution_regression.py  test_execution_router.py  test_filesystem_actions.py  test_filesystem_approval.py  test_filesystem_policy.py  test_filesystem_tools.py  test_foreground_priority_latency.py  test_generation_profiles.py  test_inference_priority.py  test_local_capabilities.py  test_local_stt.py  test_local_tool_selection.py  test_local_tts.py  test_memory_conflict_resolution.py  test_memory_extraction.py  test_memory_extraction_precision.py  test_memory_repository.py  test_memory_response_latency.py  test_memory_restart.py  test_memory_retrieval.py  test_memory_write.py  test_microphone_capture.py  test_ollama_inference_priority.py  (+19 more)
(+141 files in other folders)
